mejora del juego

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="result" class="result" style="display: none;">
             <div id="result-text"></div>
             <div id="result-image"></div>
+            <button id="volver">VOLVER</button>
         </div>
     </div>
     <script src="script.js"></script>
