juego de desarrollo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="inicio" class="inicio">
         <div>
         <h1>¡¿PREPARADO PARA <br> EMPEZAR?!</h1>
-        <button id="inicioBtn"> PLAY </button>
+        <button id="inicioBtn"><img src="img/play.png" alt="boton play" style="border: none;"/></button>
     </div>
 </div>
     <div class="container" style="display: none;">
@@ -23,7 +23,7 @@
         <div id="result" class="result" style="display: none;">
             <div id="result-text"></div>
             <div id="result-image"></div>
-            <button id="volver">VOLVER</button>
+            <button id="volver"><img src="img/exit.png" alt="boton salir" style="border: none;"/></button>
         </div>
     </div>
     <script src="script.js"></script>
